# note_c

./: .ycm_extra_conf.py  CMakeLists.txt  README  cmake_uninstall.cmake.in
include/: CMakeLists.txt  conf.h  note.h  parse.h  paths.h
include/noted/: noted.h
src/: CMakeLists.txt
src/common/: CMakeLists.txt
src/libnote/: CMakeLists.txt  paths.c
src/notec/: CMakeLists.txt  notec.c
src/noted/: CMakeLists.txt  conf.c  main.c  noted.c  parse.c
